parser.output
Grammar

    0 $accept: program $end

    1 program: PROGRAM IDENT decl_part body

    2 $@1: %empty

    3 program: PROGRAM error $@1 decl_part body

    4 body: BEGINN statement_list END
    5     | BEGINN statement_list error

    6 decl_part: %empty
    7          | decl_part variable_decl
    8          | decl_part procedure_decl
    9          | decl_part function_decl

   10 variable_decl: ident_list COLON type
   11              | ident_list type
   12              | IDENT ASGN type
   13              | ident_list COLON error
   14              | IDENT ASGN error

   15 $@2: %empty

   16 variable_decl: IDENT error $@2 ASGN type

   17 ident_list: IDENT
   18           | IDENT error
   19           | ident_list COMMA IDENT

   20 procedure_decl: PROCEDURE IDENT LPAREN parameter_list RPAREN decl_part body

   21 $@3: %empty

   22 procedure_decl: PROCEDURE IDENT LPAREN parameter_list error $@3 decl_part body
   23               | PROCEDURE IDENT LPAREN RPAREN decl_part body

   24 $@4: %empty

   25 procedure_decl: PROCEDURE IDENT LPAREN error $@4 decl_part body
   26               | PROCEDURE error

   27 function_decl: FUNCTION IDENT LPAREN parameter_list RPAREN COLON simple_type decl_part body

   28 $@5: %empty

   29 function_decl: FUNCTION IDENT LPAREN parameter_list RPAREN COLON error $@5 decl_part body

   30 $@6: %empty

   31 function_decl: FUNCTION IDENT LPAREN parameter_list error $@6 simple_type decl_part body

   32 $@7: %empty

   33 function_decl: FUNCTION IDENT LPAREN parameter_list RPAREN error $@7 simple_type decl_part body
   34              | FUNCTION IDENT LPAREN RPAREN COLON simple_type decl_part body

   35 $@8: %empty

   36 function_decl: FUNCTION IDENT LPAREN RPAREN COLON error $@8 decl_part body

   37 $@9: %empty

   38 function_decl: FUNCTION IDENT LPAREN error $@9 simple_type decl_part body

   39 $@10: %empty

   40 function_decl: FUNCTION IDENT LPAREN RPAREN error $@10 simple_type decl_part body
   41              | FUNCTION error

   42 parameter_list: ident_list_amp COLON parameter_type parameter_list_list

   43 parameter_list_list: %empty
   44                    | SEMI parameter_list
   45                    | parameter_list

   46 ident_list_amp: IDENT
   47               | IDENT error
   48               | AMP IDENT
   49               | AMP IDENT error
   50               | ident_list_amp COMMA IDENT
   51               | ident_list_amp COMMA AMP IDENT

   52 parameter_type: simple_type
   53               | IDENT

   54 type: simple_type
   55     | IDENT
   56     | ARRAY LBRACK index RBRACK OF type
   57     | ARRAY LBRACK index RBRACK OF error

   58 $@11: %empty

   59 type: ARRAY LBRACK index error $@11 OF type
   60     | RECORD field_list END

   61 simple_type: INT
   62            | FLOAT
   63            | BOOL

   64 index: ICONST COLON ICONST index_list

   65 $@12: %empty

   66 index: ICONST error $@12 ICONST index_list

   67 index_list: %empty
   68           | COMMA index
   69           | index

   70 field_list: ident_list COLON type field_list_list
   71           | ident_list type field_list_list

   72 field_list_list: %empty
   73                | field_list

   74 statement_list: %empty
   75               | statement_list assignment_statement
   76               | statement_list subroutine_call
   77               | statement_list return_statement
   78               | statement_list for_statement
   79               | statement_list while_statement
   80               | statement_list if_statement
   81               | statement_list read_statement
   82               | statement_list write_statement

   83 assignment_statement: variable ASGN expression

   84 $@13: %empty

   85 assignment_statement: variable error $@13 expression

   86 subroutine_call: IDENT LPAREN RPAREN
   87                | IDENT LPAREN error
   88                | IDENT LPAREN expression_list RPAREN
   89                | IDENT LPAREN expression_list error

   90 expression_list: expression
   91                | expression_list COMMA expression

   92 return_statement: RETURN expression

   93 for_statement: FOR IDENT IN expression COLON expression statement_list END
   94              | FOR IDENT IN expression COLON expression statement_list error

   95 $@14: %empty

   96 for_statement: FOR IDENT IN expression error $@14 expression statement_list END

   97 $@15: %empty

   98 for_statement: FOR error $@15 IN expression COLON expression statement_list END

   99 while_statement: WHILE LPAREN expression RPAREN statement_list END
  100                | WHILE LPAREN expression RPAREN statement_list error

  101 $@16: %empty

  102 while_statement: WHILE LPAREN expression error $@16 statement_list END

  103 if_statement: IF LPAREN expression RPAREN THEN statement_list END

  104 $@17: %empty

  105 if_statement: IF LPAREN expression error $@17 THEN statement_list END
  106             | IF LPAREN expression RPAREN THEN statement_list error
  107             | IF LPAREN expression RPAREN THEN statement_list elif_part END
  108             | IF LPAREN expression RPAREN THEN statement_list elif_part error
  109             | IF LPAREN expression RPAREN THEN statement_list else_part END
  110             | IF LPAREN expression RPAREN THEN statement_list else_part error
  111             | IF LPAREN expression RPAREN THEN statement_list elif_part else_part END
  112             | IF LPAREN expression RPAREN THEN statement_list elif_part else_part error

  113 else_part: ELSE statement_list

  114 elif_part: ELIF LPAREN expression RPAREN THEN statement_list elif_part_list

  115 $@18: %empty

  116 elif_part: ELIF LPAREN expression error $@18 THEN statement_list elif_part_list

  117 elif_part_list: %empty
  118               | elif_part

  119 write_statement: WRITE LPAREN SCONST RPAREN
  120                | WRITE LPAREN SCONST error
  121                | WRITE LPAREN SCONST expression_comma_list RPAREN
  122                | WRITE LPAREN SCONST expression_comma_list error

  123 expression_comma_list: COMMA expression
  124                      | expression_comma_list COMMA expression

  125 read_statement: READ LPAREN SCONST expression_comma_list RPAREN
  126               | READ LPAREN SCONST expression_comma_list error

  127 expression: and_expression
  128           | and_expression DBAR and_expression

  129 and_expression: logic_expression
  130               | logic_expression DAMP logic_expression

  131 logic_expression: simple_expression
  132                 | simple_expression LT simple_expression
  133                 | simple_expression LE simple_expression
  134                 | simple_expression EQ simple_expression
  135                 | simple_expression NE simple_expression
  136                 | simple_expression GE simple_expression
  137                 | simple_expression GT simple_expression

  138 simple_expression: simple_expression PLUS term
  139                  | simple_expression MINUS term
  140                  | PLUS term
  141                  | MINUS term
  142                  | term

  143 term: factor
  144     | factor factor_list

  145 factor_list: STAR factor
  146            | DIV factor
  147            | factor_list STAR factor
  148            | factor_list DIV factor

  149 factor: constant
  150       | variable
  151       | subroutine_call
  152       | LPAREN expression RPAREN
  153       | BANG factor

  154 variable: IDENT
  155         | IDENT arrayvar
  156         | IDENT recvar
  157         | IDENT arrayvar recvar

  158 arrayvar: LBRACK expression_list RBRACK
  159         | LBRACK expression_list error

  160 recvar: DOT variable_list

  161 variable_list: variable
  162              | recvar variable

  163 constant: ICONST
  164         | FCONST
  165         | TRUE
  166         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3 5 13 14 16 18 22 25 26 29 31 33 36 38 40 41 47 49 57 59 66 85 87 89 94 96 98 100 102 105 106 108 110 112 116 120 122 126 159
    AMP (258) 48 49 51
    ASGN (259) 12 14 16 83
    BANG (260) 153
    COLON (261) 10 13 27 29 34 36 42 64 70 93 94 98
    COMMA (262) 19 50 51 68 91 123 124
    DAMP (263) 130
    DBAR (264) 128
    DIV (265) 146 148
    DOT (266) 160
    EQ (267) 134
    GE (268) 136
    GT (269) 137
    LBRACK (270) 56 57 59 158 159
    LE (271) 133
    LPAREN (272) 20 22 23 25 27 29 31 33 34 36 38 40 86 87 88 89 99 100 102 103 105 106 107 108 109 110 111 112 114 116 119 120 121 122 125 126 152
    LT (273) 132
    MINUS (274) 139 141
    NE (275) 135
    PLUS (276) 138 140
    RBRACK (277) 56 57 158
    RPAREN (278) 20 23 27 29 33 34 36 40 86 88 99 100 103 106 107 108 109 110 111 112 114 119 121 125 152
    SEMI (279) 44
    STAR (280) 145 147
    ARRAY (281) 56 57 59
    BEGINN (282) 4 5
    BOOL (283) 63
    ELSE (284) 113
    ELIF (285) 114 116
    END (286) 4 60 93 96 98 99 102 103 105 107 109 111
    FALSE (287) 166
    FOR (288) 93 94 96 98
    FLOAT (289) 62
    FUNCTION (290) 27 29 31 33 34 36 38 40 41
    IF (291) 103 105 106 107 108 109 110 111 112
    IN (292) 93 94 96 98
    INT (293) 61
    OF (294) 56 57 59
    PROCEDURE (295) 20 22 23 25 26
    PROGRAM (296) 1 3
    READ (297) 125 126
    RECORD (298) 60
    RETURN (299) 92
    THEN (300) 103 105 106 107 108 109 110 111 112 114 116
    TRUE (301) 165
    WHILE (302) 99 100 102
    WRITE (303) 119 120 121 122
    FCONST (304) 164
    ICONST (305) 64 66 163
    IDENT (306) 1 12 14 16 17 18 19 20 22 23 25 27 29 31 33 34 36 38 40 46 47 48 49 50 51 53 55 86 87 88 89 93 94 96 154 155 156 157
    SCONST (307) 119 120 121 122 125 126


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program (54)
        on left: 1 3
        on right: 0
    $@1 (55)
        on left: 2
        on right: 3
    body (56)
        on left: 4 5
        on right: 1 3 20 22 23 25 27 29 31 33 34 36 38 40
    decl_part (57)
        on left: 6 7 8 9
        on right: 1 3 7 8 9 20 22 23 25 27 29 31 33 34 36 38 40
    variable_decl (58)
        on left: 10 11 12 13 14 16
        on right: 7
    $@2 (59)
        on left: 15
        on right: 16
    ident_list (60)
        on left: 17 18 19
        on right: 10 11 13 19 70 71
    procedure_decl (61)
        on left: 20 22 23 25 26
        on right: 8
    $@3 (62)
        on left: 21
        on right: 22
    $@4 (63)
        on left: 24
        on right: 25
    function_decl (64)
        on left: 27 29 31 33 34 36 38 40 41
        on right: 9
    $@5 (65)
        on left: 28
        on right: 29
    $@6 (66)
        on left: 30
        on right: 31
    $@7 (67)
        on left: 32
        on right: 33
    $@8 (68)
        on left: 35
        on right: 36
    $@9 (69)
        on left: 37
        on right: 38
    $@10 (70)
        on left: 39
        on right: 40
    parameter_list (71)
        on left: 42
        on right: 20 22 27 29 31 33 44 45
    parameter_list_list (72)
        on left: 43 44 45
        on right: 42
    ident_list_amp (73)
        on left: 46 47 48 49 50 51
        on right: 42 50 51
    parameter_type (74)
        on left: 52 53
        on right: 42
    type (75)
        on left: 54 55 56 57 59 60
        on right: 10 11 12 16 56 59 70 71
    $@11 (76)
        on left: 58
        on right: 59
    simple_type (77)
        on left: 61 62 63
        on right: 27 31 33 34 38 40 52 54
    index (78)
        on left: 64 66
        on right: 56 57 59 68 69
    $@12 (79)
        on left: 65
        on right: 66
    index_list (80)
        on left: 67 68 69
        on right: 64 66
    field_list (81)
        on left: 70 71
        on right: 60 73
    field_list_list (82)
        on left: 72 73
        on right: 70 71
    statement_list (83)
        on left: 74 75 76 77 78 79 80 81 82
        on right: 4 5 75 76 77 78 79 80 81 82 93 94 96 98 99 100 102 103 105 106 107 108 109 110 111 112 113 114 116
    assignment_statement (84)
        on left: 83 85
        on right: 75
    $@13 (85)
        on left: 84
        on right: 85
    subroutine_call (86)
        on left: 86 87 88 89
        on right: 76 151
    expression_list (87)
        on left: 90 91
        on right: 88 89 91 158 159
    return_statement (88)
        on left: 92
        on right: 77
    for_statement (89)
        on left: 93 94 96 98
        on right: 78
    $@14 (90)
        on left: 95
        on right: 96
    $@15 (91)
        on left: 97
        on right: 98
    while_statement (92)
        on left: 99 100 102
        on right: 79
    $@16 (93)
        on left: 101
        on right: 102
    if_statement (94)
        on left: 103 105 106 107 108 109 110 111 112
        on right: 80
    $@17 (95)
        on left: 104
        on right: 105
    else_part (96)
        on left: 113
        on right: 109 110 111 112
    elif_part (97)
        on left: 114 116
        on right: 107 108 111 112 118
    $@18 (98)
        on left: 115
        on right: 116
    elif_part_list (99)
        on left: 117 118
        on right: 114 116
    write_statement (100)
        on left: 119 120 121 122
        on right: 82
    expression_comma_list (101)
        on left: 123 124
        on right: 121 122 124 125 126
    read_statement (102)
        on left: 125 126
        on right: 81
    expression (103)
        on left: 127 128
        on right: 83 85 90 91 92 93 94 96 98 99 100 102 103 105 106 107 108 109 110 111 112 114 116 123 124 152
    and_expression (104)
        on left: 129 130
        on right: 127 128
    logic_expression (105)
        on left: 131 132 133 134 135 136 137
        on right: 129 130
    simple_expression (106)
        on left: 138 139 140 141 142
        on right: 131 132 133 134 135 136 137 138 139
    term (107)
        on left: 143 144
        on right: 138 139 140 141 142
    factor_list (108)
        on left: 145 146 147 148
        on right: 144 147 148
    factor (109)
        on left: 149 150 151 152 153
        on right: 143 144 145 146 147 148 153
    variable (110)
        on left: 154 155 156 157
        on right: 83 85 150 161 162
    arrayvar (111)
        on left: 158 159
        on right: 155 157
    recvar (112)
        on left: 160
        on right: 156 157 162
    variable_list (113)
        on left: 161 162
        on right: 160
    constant (114)
        on left: 163 164 165 166
        on right: 149


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . IDENT decl_part body
    3        | PROGRAM . error $@1 decl_part body

    error  shift, and go to state 3
    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    3 program: PROGRAM error . $@1 decl_part body

    $default  reduce using rule 2 ($@1)

    $@1  go to state 6


State 4

    1 program: PROGRAM IDENT . decl_part body

    $default  reduce using rule 6 (decl_part)

    decl_part  go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    3 program: PROGRAM error $@1 . decl_part body

    $default  reduce using rule 6 (decl_part)

    decl_part  go to state 8


State 7

    1 program: PROGRAM IDENT decl_part . body
    7 decl_part: decl_part . variable_decl
    8          | decl_part . procedure_decl
    9          | decl_part . function_decl

    BEGINN     shift, and go to state 9
    FUNCTION   shift, and go to state 10
    PROCEDURE  shift, and go to state 11
    IDENT      shift, and go to state 12

    body            go to state 13
    variable_decl   go to state 14
    ident_list      go to state 15
    procedure_decl  go to state 16
    function_decl   go to state 17


State 8

    3 program: PROGRAM error $@1 decl_part . body
    7 decl_part: decl_part . variable_decl
    8          | decl_part . procedure_decl
    9          | decl_part . function_decl

    BEGINN     shift, and go to state 9
    FUNCTION   shift, and go to state 10
    PROCEDURE  shift, and go to state 11
    IDENT      shift, and go to state 12

    body            go to state 18
    variable_decl   go to state 14
    ident_list      go to state 15
    procedure_decl  go to state 16
    function_decl   go to state 17


State 9

    4 body: BEGINN . statement_list END
    5     | BEGINN . statement_list error

    $default  reduce using rule 74 (statement_list)

    statement_list  go to state 19


State 10

   27 function_decl: FUNCTION . IDENT LPAREN parameter_list RPAREN COLON simple_type decl_part body
   29              | FUNCTION . IDENT LPAREN parameter_list RPAREN COLON error $@5 decl_part body
   31              | FUNCTION . IDENT LPAREN parameter_list error $@6 simple_type decl_part body
   33              | FUNCTION . IDENT LPAREN parameter_list RPAREN error $@7 simple_type decl_part body
   34              | FUNCTION . IDENT LPAREN RPAREN COLON simple_type decl_part body
   36              | FUNCTION . IDENT LPAREN RPAREN COLON error $@8 decl_part body
   38              | FUNCTION . IDENT LPAREN error $@9 simple_type decl_part body
   40              | FUNCTION . IDENT LPAREN RPAREN error $@10 simple_type decl_part body
   41              | FUNCTION . error

    error  shift, and go to state 20
    IDENT  shift, and go to state 21


State 11

   20 procedure_decl: PROCEDURE . IDENT LPAREN parameter_list RPAREN decl_part body
   22               | PROCEDURE . IDENT LPAREN parameter_list error $@3 decl_part body
   23               | PROCEDURE . IDENT LPAREN RPAREN decl_part body
   25               | PROCEDURE . IDENT LPAREN error $@4 decl_part body
   26               | PROCEDURE . error

    error  shift, and go to state 22
    IDENT  shift, and go to state 23


State 12

   12 variable_decl: IDENT . ASGN type
   14              | IDENT . ASGN error
   16              | IDENT . error $@2 ASGN type
   17 ident_list: IDENT .
   18           | IDENT . error

    error  shift, and go to state 24
    ASGN   shift, and go to state 25

    COLON   reduce using rule 17 (ident_list)
    COMMA   reduce using rule 17 (ident_list)
    ARRAY   reduce using rule 17 (ident_list)
    BOOL    reduce using rule 17 (ident_list)
    FLOAT   reduce using rule 17 (ident_list)
    INT     reduce using rule 17 (ident_list)
    RECORD  reduce using rule 17 (ident_list)
    IDENT   reduce using rule 17 (ident_list)


State 13

    1 program: PROGRAM IDENT decl_part body .

    $default  reduce using rule 1 (program)


State 14

    7 decl_part: decl_part variable_decl .

    $default  reduce using rule 7 (decl_part)


State 15

   10 variable_decl: ident_list . COLON type
   11              | ident_list . type
   13              | ident_list . COLON error
   19 ident_list: ident_list . COMMA IDENT

    COLON   shift, and go to state 26
    COMMA   shift, and go to state 27
    ARRAY   shift, and go to state 28
    BOOL    shift, and go to state 29
    FLOAT   shift, and go to state 30
    INT     shift, and go to state 31
    RECORD  shift, and go to state 32
    IDENT   shift, and go to state 33

    type         go to state 34
    simple_type  go to state 35


State 16

    8 decl_part: decl_part procedure_decl .

    $default  reduce using rule 8 (decl_part)


State 17

    9 decl_part: decl_part function_decl .

    $default  reduce using rule 9 (decl_part)


State 18

    3 program: PROGRAM error $@1 decl_part body .

    $default  reduce using rule 3 (program)


State 19

    4 body: BEGINN statement_list . END
    5     | BEGINN statement_list . error
   75 statement_list: statement_list . assignment_statement
   76               | statement_list . subroutine_call
   77               | statement_list . return_statement
   78               | statement_list . for_statement
   79               | statement_list . while_statement
   80               | statement_list . if_statement
   81               | statement_list . read_statement
   82               | statement_list . write_statement

    error   shift, and go to state 36
    END     shift, and go to state 37
    FOR     shift, and go to state 38
    IF      shift, and go to state 39
    READ    shift, and go to state 40
    RETURN  shift, and go to state 41
    WHILE   shift, and go to state 42
    WRITE   shift, and go to state 43
    IDENT   shift, and go to state 44

    assignment_statement  go to state 45
    subroutine_call       go to state 46
    return_statement      go to state 47
    for_statement         go to state 48
    while_statement       go to state 49
    if_statement          go to state 50
    write_statement       go to state 51
    read_statement        go to state 52
    variable              go to state 53


State 20

   41 function_decl: FUNCTION error .

    $default  reduce using rule 41 (function_decl)


State 21

   27 function_decl: FUNCTION IDENT . LPAREN parameter_list RPAREN COLON simple_type decl_part body
   29              | FUNCTION IDENT . LPAREN parameter_list RPAREN COLON error $@5 decl_part body
   31              | FUNCTION IDENT . LPAREN parameter_list error $@6 simple_type decl_part body
   33              | FUNCTION IDENT . LPAREN parameter_list RPAREN error $@7 simple_type decl_part body
   34              | FUNCTION IDENT . LPAREN RPAREN COLON simple_type decl_part body
   36              | FUNCTION IDENT . LPAREN RPAREN COLON error $@8 decl_part body
   38              | FUNCTION IDENT . LPAREN error $@9 simple_type decl_part body
   40              | FUNCTION IDENT . LPAREN RPAREN error $@10 simple_type decl_part body

    LPAREN  shift, and go to state 54


State 22

   26 procedure_decl: PROCEDURE error .

    $default  reduce using rule 26 (procedure_decl)


State 23

   20 procedure_decl: PROCEDURE IDENT . LPAREN parameter_list RPAREN decl_part body
   22               | PROCEDURE IDENT . LPAREN parameter_list error $@3 decl_part body
   23               | PROCEDURE IDENT . LPAREN RPAREN decl_part body
   25               | PROCEDURE IDENT . LPAREN error $@4 decl_part body

    LPAREN  shift, and go to state 55


State 24

   16 variable_decl: IDENT error . $@2 ASGN type
   18 ident_list: IDENT error .

    ASGN      reduce using rule 15 ($@2)
    $default  reduce using rule 18 (ident_list)

    $@2  go to state 56


State 25

   12 variable_decl: IDENT ASGN . type
   14              | IDENT ASGN . error

    error   shift, and go to state 57
    ARRAY   shift, and go to state 28
    BOOL    shift, and go to state 29
    FLOAT   shift, and go to state 30
    INT     shift, and go to state 31
    RECORD  shift, and go to state 32
    IDENT   shift, and go to state 33

    type         go to state 58
    simple_type  go to state 35


State 26

   10 variable_decl: ident_list COLON . type
   13              | ident_list COLON . error

    error   shift, and go to state 59
    ARRAY   shift, and go to state 28
    BOOL    shift, and go to state 29
    FLOAT   shift, and go to state 30
    INT     shift, and go to state 31
    RECORD  shift, and go to state 32
    IDENT   shift, and go to state 33

    type         go to state 60
    simple_type  go to state 35


State 27

   19 ident_list: ident_list COMMA . IDENT

    IDENT  shift, and go to state 61


State 28

   56 type: ARRAY . LBRACK index RBRACK OF type
   57     | ARRAY . LBRACK index RBRACK OF error
   59     | ARRAY . LBRACK index error $@11 OF type

    LBRACK  shift, and go to state 62


State 29

   63 simple_type: BOOL .

    $default  reduce using rule 63 (simple_type)


State 30

   62 simple_type: FLOAT .

    $default  reduce using rule 62 (simple_type)


State 31
